--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,28 @@
-libssh (0.7.2-1borgcollective1) trusty; urgency=medium
+libssh (0.7.2-5vivid5) vivid; urgency=medium
+
+  * vivid up
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 19 Oct 2015 09:59:04 +0200
+
+libssh (0.7.2-4utopic4) utopic; urgency=medium
+
+  * utopic up 
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 19 Oct 2015 09:58:21 +0200
+
+libssh (0.7.2-3trusty3) trusty; urgency=medium
+
+  * trusty up
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 19 Oct 2015 09:57:33 +0200
+
+libssh (0.7.2-2precise2) precise; urgency=medium
+
+  * precise up
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 19 Oct 2015 09:56:50 +0200
+
+libssh (0.7.2-1lucid2) lucid; urgency=medium
 
   * UPDATE to 0.7.2 
 
