--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libssh (0.7.3-16wily3) wily; urgency=medium
+
+  * wily
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 29 Feb 2016 13:53:47 +0100
+
 libssh (0.7.3-11precise2) precise; urgency=medium
 
   * precise up
