--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,33 @@
+libssh (0.7.3-21xenial1) xenial; urgency=medium
+
+  * xenial
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 16 Mar 2016 11:06:24 +0100
+
+libssh (0.7.3-20wily1) wily; urgency=medium
+
+  * wily
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 16 Mar 2016 11:06:05 +0100
+
+libssh (0.7.3-19vivid1) vivid; urgency=medium
+
+  * vivid
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 16 Mar 2016 11:05:43 +0100
+
+libssh (0.7.3-18trusty1) trusty; urgency=medium
+
+  * trusty
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 16 Mar 2016 11:05:18 +0100
+
+libssh (0.7.3-17precise1) precise; urgency=medium
+
+  *  precise
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 16 Mar 2016 11:04:21 +0100
+
 libssh (0.7.3-16wily3) wily; urgency=medium
 
   * wily
