--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libssh (0.7.4-0up0) UNRELEASED; urgency=medium
+
+  * Upgrade from upstream
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Mon, 06 Feb 2017 13:43:07 +0100
+
 libssh (0.7.3-34xenial) xenial; urgency=medium
 
   * CRASH FIX: xenial
