--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 ChangeLog
 ==========
+
+version 0.7.5 (released 2017-04-13)
+  * Fixed a memory allocation issue with buffers
+  * Fixed PKI on Windows
+  * Fixed some SSHv1 functions
+  * Fixed config hostname expansion
+
 version 0.7.4 (released 2017-02-03)
   * Added id_ed25519 to the default identity list
   * Fixed sftp EOF packet handling
