--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libssh (0.8.4-0up0) UNRELEASED; urgency=medium
+
+  * Import of 0.8.4
+
+ -- David Kedves <kedazo@severalnines.com>  Wed, 17 Oct 2018 19:33:03 +0200
+
 libssh (0.8.2-0up7) trusty; urgency=medium
 
   * Team upload.
