--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+libssh (0.8.4-0up4) xenial; urgency=medium
+
+  * Team upload.
+  * xenial packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 17 Oct 2018 19:45:54 +0200
+
+libssh (0.8.4-0up3) bionic; urgency=medium
+
+  * Team upload.
+  * bionic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 17 Oct 2018 19:45:53 +0200
+
+libssh (0.8.4-0up2) xenial; urgency=medium
+
+  * Team upload.
+  * xenial packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 17 Oct 2018 19:45:42 +0200
+
+libssh (0.8.4-0up1) bionic; urgency=medium
+
+  * Team upload.
+  * bionic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 17 Oct 2018 19:45:40 +0200
+
 libssh (0.8.4-0up0) UNRELEASED; urgency=medium
 
   * Import of 0.8.4
