dch up for initial try

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libssh (0.8.6-0up1) UNRELEASED; urgency=medium
+
+  * Import of 0.8.6
+
+ -- David Kedves <kedazo@severalnines.com>  Tue, 08 Jan 2019 09:57:06 +0100
+
 libssh (0.8.5-0up14) xenial; urgency=medium
 
   * Team upload.
