--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+libssh (0.8.6-0up4) cosmic; urgency=medium
+
+  * Team upload.
+  * cosmic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Tue, 08 Jan 2019 10:00:59 +0100
+
+libssh (0.8.6-0up3) bionic; urgency=medium
+
+  * Team upload.
+  * bionic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Tue, 08 Jan 2019 10:00:58 +0100
+
+libssh (0.8.6-0up2) xenial; urgency=medium
+
+  * Team upload.
+  * xenial packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Tue, 08 Jan 2019 10:00:56 +0100
+
 libssh (0.8.6-0up1) UNRELEASED; urgency=medium
 
   * Import of 0.8.6
