--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+libssh (0.8.6-0up7) cosmic; urgency=medium
+
+  * Team upload.
+  * cosmic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 20 Feb 2019 14:18:35 +0100
+
+libssh (0.8.6-0up6) bionic; urgency=medium
+
+  * Team upload.
+  * bionic packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 20 Feb 2019 14:18:33 +0100
+
+libssh (0.8.6-0up5) xenial; urgency=medium
+
+  * Team upload.
+  * xenial packaging
+
+ -- David Kedves <david.kedves@borgcollective.eu>  Wed, 20 Feb 2019 14:18:32 +0100
+
 libssh (0.8.6-0up4) cosmic; urgency=medium
 
   * Team upload.
